--- a/style.css
+++ b/style.css
@@ -22,9 +22,10 @@
 
 .container h3{
   margin-bottom: 20px;
+  font-size: 20px;
   position: absolute;
-  top: 20px;
-  right: 100px;
+  top: 0px;
+  right: 30px;
 }
 
 .container button{
